# CRLF-Injection-Scanner

./: README.md  pyproject.toml  requirements.txt
crlf/: crlf.py  crlf_scan_results.json  crlf_scan_results.txt
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
scanner/: scanner.py
